--- a/src/Assets/Css/Pages/Fiche/fiche.scss
+++ b/src/Assets/Css/Pages/Fiche/fiche.scss
@@ -16,6 +16,10 @@
         margin-bottom: 10px;
         margin-top: 0px;
     }
+    .intelContainerLogement{
+        margin: 5px;
+        padding-right: 10px;
+    }
 }
 .intelContainerOwner{
     display: flex;
